# GFK-sem4

./: README.md
TASK-2/: CMakeLists.txt  main.cpp
TASK-2/include/: ShareTechMono-Regular.h  hexagon.h  hexagon_CMY.h  hexagon_HSB.h  hexagon_HSL.h  hexagon_RGB.h  slider.h
TASK-2/src/: hexagon.cpp  hexagon_CMY.cpp  hexagon_HSB.cpp  hexagon_HSL.cpp  hexagon_RGB.cpp  slider.cpp
TASK-3/: CMakeLists.txt  MonkeyPanel.cpp  MonkeyPanel.h  MyFrame.cpp  MyFrame.h  main.cpp
TASK-4/: CMakeLists.txt  main.cpp
TASK-4/include/: ChartClass.h  ConfigClass.h  GUI.h  GUIMyFrame1.h  vecmat.h
TASK-4/src/: ChartClass.cpp  ConfigClass.cpp  GUI.cpp  GUIMyFrame1.cpp  vecmat.cpp
TASK-5/: CMakeLists.txt  main.cpp
TASK-5/include/: GUIMyFrame1.h  vecmat.h
TASK-5/src/: GUI.cpp  GUIMyFrame1.cpp  vecmat.cpp
TASK-6/: CMakeLists.txt  main.cpp
TASK-6/include/: GUI.h  GUIMyFrame1.h
TASK-6/src/: GUI.cpp  GUIMyFrame1.cpp
TASK-8/: CMakeLists.txt  main.cpp
TASK-8/include/: ExifPanel.h  GUI.h  GUIMyFrame1.h
TASK-8/src/: ExifPanel.cpp  GUI.cpp  GUIMyFrame1.cpp
